--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    sourceSets {
+        main {
+            res.srcDirs = ['src/main/res/layout/auth',
+                           'src/main/res/layout',
+                           'src/main/res' ]
+        }
+    }
 }
 
 dependencies {
