--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'com.firebaseui:firebase-ui-database:6.4.0'
 
 
     implementation platform('com.google.firebase:firebase-bom:28.3.1')
@@ -78,6 +79,6 @@ dependencies {
     implementation 'gun0912.ted:tedbottompicker:2.0.1'
     implementation 'io.github.ParkSangGwon:tedpermission-normal:3.2.3'
 
-//    把 recyclerview 同步於遠端
+//   recyclerview
     implementation "androidx.recyclerview:recyclerview:1.2.1"
 }
