--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,7 +70,9 @@ dependencies {
     implementation 'com.github.mohammadatif:CircularImageView:1.0.1'
 
     //圖片選擇工具
+    implementation 'com.github.lovetuzitong:MultiImageSelector:1.2'
     implementation 'com.yuyh.imgsel:library:2.1.0'
+
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
