--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ android {
                            'src/main/res/layout/me',
                            'src/main/res/layout/toolBar',
                            'src/main/res/layout/auth',
+                           'src/main/res/layout/chat',
                            'src/main/res/layout',
                            'src/main/res']
         }
