--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildFeatures{
+        viewBinding true
+    }
     sourceSets {
         main {
             res.srcDirs = ['src/main/res/layout/group',
@@ -50,6 +53,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
 
     implementation 'com.google.firebase:firebase-core:19.0.1'
     implementation 'com.google.firebase:firebase-auth:21.0.1'
@@ -68,7 +72,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:19.0.1'
     implementation 'com.google.firebase:firebase-database:20.0.1'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
+    implementation 'com.firebaseui:firebase-ui:0.6.0'
     implementation 'com.github.mohammadatif:CircularImageView:1.0.1'
+
+    implementation 'com.google.android.material:material:1.0.0-rc01'
 
     //圖片選擇工具
     implementation 'com.github.lovetuzitong:MultiImageSelector:1.2'
@@ -84,6 +91,5 @@ dependencies {
     implementation 'gun0912.ted:tedbottompicker:2.0.1'
     implementation 'io.github.ParkSangGwon:tedpermission-normal:3.2.3'
 
-//   recyclerview
-    implementation "androidx.recyclerview:recyclerview:1.2.1"
+
 }
