--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:20.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-firestore:23.0.3'
-    implementation 'com.firebaseui:firebase-ui-database:6.4.0'
+//    implementation 'com.firebaseui:firebase-ui-database:6.4.0'
+    implementation 'com.firebaseui:firebase-ui-database:8.0.0'
+//    implementation 'com.firebaseui:firebase-ui:3.1.0'
+//    implementation 'androidx.paging:paging-runtime:3.x.x'
 
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     testImplementation 'junit:junit:4.+'
